2009-05-04  Gautier Portet <kassoulet gmail com>

	* po/fr.po: Update french translation. (thanks Olivier)


2009-04-22  Gautier Portet <kassoulet gmail com>

	* po/bg.po: Add Bulgarian translation. (thanks Nikola)

2009-04-14  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix TagReader freeze when adding
	  m4p files. (lp:263889)
	  release 1.4.3

2009-03-11  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Sanitize URI handling.


2009-03-10  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix spelling errors.
	  Removed some translation of log() messages.
	  (thanks Hew)

2009-03-10  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Display an error dialog
	  when something bad happened while encoding.

2009-02-22  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Add notification at the end of
	 conversion.

2009-01-26  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py, data/soundconverter.glade:
	  Add a checkbox to select .oga extension for vorbis files.
	* po/*: Update British, Spanish, Russian and Slovak translations.
	  Release 1.4.2

2008-12-19  Gautier Portet  <kassoulet gmail com>
	* src/soundconverter.py: Oops, removed python 2.5 line, sorry :).
	  (thanks Dag)

2008-12-01  Gautier Portet  <kassoulet gmail com>
	* po/sv.po: Updated swedish translation, removed useless sv_SE.po.
		(thanks Daniel)
	* src/soundconverter.py: add event flushing in BackgroundTask,
	  so GUI should not stall anymore.

2008-11-06  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Fixed (?) raising of UnicodeDecodeError
	  when tags contained non-utf-8 strings. (fix LP: #223371)
	* po/: Add Breton, Greek, Finnish, Hindi, Telugu and Turkish
	  translations. Sync with Rosetta.

2008-10-14  Gautier Portet  <kassoulet gmail com>

	* src/soundconverter.py: Change status text when adding files, so
	  the user gets a clue of what is happening.
